@@ -258,12 +258,19 @@ class tx_dam_browse_media extends browse_links {
 				'disallowedFileTypes' => $this->disallowedFileTypes,
 				'addParams' => $this->addParams,
 				'pointer' => $this->damSC->selection->pointer->page,
-				'SLCMD' => t3lib_div::GParrayMerged('SLCMD'),
 				'Selection' => $this->damSC->selection->sl->sel,
 				'Query' => $this->damSC->selection->qg->query,
-				'QueryArray' => $this->damSC->selection->qg->getQueryParts(),
-				'PM' => t3lib_div::GParrayMerged('PM'),
+				'QueryArray' => $this->damSC->selection->qg->getQueryParts()
 			);
+			
+			if (version_compare(TYPO3_version, '4.3.0', '<')) {
+				$debugArr['SLCMD'] = t3lib_div::GParrayMerged('SLCMD');
+				$debugArr['PM'] = t3lib_div::GParrayMerged('PM');
+			}
+			else {
+				$debugArr['SLCMD'] = t3lib_div::_GPmerged('SLCMD');
+				$debugArr['PM'] = t3lib_div::_GPmerged('PM');
+			}
 
 			$this->damSC->debugContent['browse_links'] = '<h4>EB SETTINGS</h4>'.t3lib_div::view_array($debugArr);
 
