@@ -237,7 +237,14 @@ class tx_dam_SCbase extends t3lib_SCbase {
 
 			// check if tx_dam_folder was set by GP which takes precedence, if not use command sent by navframe
 			// order: GP (script), SLCMD (navframe), MOD_SETTINGS (stored)
-		$SLCMD = t3lib_div::GParrayMerged('SLCMD');
+		
+		if (version_compare(TYPO3_version, '4.3.0', '<')) {
+			$SLCMD = t3lib_div::GParrayMerged('SLCMD');
+		}
+		else {
+			$SLCMD = t3lib_div::_GPmerged('SLCMD');
+		}
+		
 		if (!$SET['tx_dam_folder'] AND is_array($SLCMD['SELECT']) AND is_array($SLCMD['SELECT']['txdamFolder'])) {
 			$this->path = tx_dam::path_makeRelative(key($SLCMD['SELECT']['txdamFolder']));
 		}
